<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:divider="@drawable/divider"
    android:showDividers="middle"
    android:dividerPadding="15dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        >

        <ImageView
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:layout_centerInParent="true"
            />
        <TextView
            android:id="@+id/tv_detail_restOfTime"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/detail_time_height"
            android:layout_marginRight="@dimen/detail_time_marginM"
            android:layout_marginBottom="@dimen/detail_time_marginB"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/guideline1"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <kankan.wheel.widget.adapters.WheelView
                android:id="@+id/wv_detail_hour"
                android:layout_width="@dimen/detail_time_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
            </kankan.wheel.widget.adapters.WheelView>

            <TextView
                android:text="@string/detail_hour"
                style="@style/normalTextStyle"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/detail_time_height"
            android:layout_marginLeft="@dimen/detail_time_marginM"
            android:layout_marginBottom="@dimen/detail_time_marginB"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/guideline1"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <kankan.wheel.widget.adapters.WheelView
                android:id="@+id/wv_detail_minute"
                android:layout_width="@dimen/detail_time_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
            </kankan.wheel.widget.adapters.WheelView>

            <TextView
                android:text="@string/detail_minute"
                style="@style/normalTextStyle"
                />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_detail_setFrequency"
        style="@style/detail_blockStyle"
        android:layout_height="@dimen/detail_block_height"
        >

        <TextView
            style="@style/normalTextStyle"
            android:text="@string/detail_repeat"
            />

        <TextView
            android:id="@+id/tv_detail_frequency"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/detail_frequency_once"
            />
        <ImageView
            style="@style/detail_tipIcon"
            android:src="@drawable/arrow"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_detail_setRingtone"
        android:layout_height="@dimen/detail_block_height"
        style="@style/detail_blockStyle"
        >
        <TextView
            style="@style/normalTextStyle"
            android:text="@string/detail_ringtone"
            />
        <TextView
            android:id="@+id/tv_detail_ringtone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/detail_default_ringtone"
            android:layout_alignParentBottom="true"
            />
        <ImageView
            style="@style/detail_tipIcon"
            android:src="@drawable/arrow1"
            />
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/ll_detail_setVolume"
        style="@style/detail_blockStyle"
        android:orientation="horizontal"
        android:layout_height="@dimen/detail_block_height"
        android:gravity="center_vertical"
        >
        <TextView
            style="@style/normalTextStyle"
            android:text="@string/detail_volume"
            />
        <SeekBar
            android:id="@+id/skBar_detail_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.SeekBar"
            android:max="100"
            android:progress="80"
            android:thumb="@drawable/blue_thumb"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_detail_setVibrate"
        style="@style/detail_blockStyle"
        android:layout_height="@dimen/detail_block_height"
        android:gravity="center_vertical"
        >
        <TextView
            style="@style/normalTextStyle"
            android:text="@string/detail_vibrate"
            android:layout_alignParentLeft="true"
            />
        <Switch
            android:id="@+id/swt_detail_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:checked="false"
            android:thumb="@drawable/swt_thumb"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_detail_setRemind"
        style="@style/detail_blockStyle"
        android:layout_height="@dimen/detail_block_height"
        >
        <TextView
            style="@style/normalTextStyle"
            android:text="@string/detail_remind_later"
            />
        <TextView
            android:id="@+id/tv_detail_remindLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_turn_off"
            android:layout_alignParentBottom="true"
            />
        <ImageView
            style="@style/detail_tipIcon"
            android:src="@drawable/arrow"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_detail_setDescription"
        style="@style/detail_blockStyle"
        android:layout_height="@dimen/detail_block_height"
        >
        <TextView
            style="@style/normalTextStyle"
            android:text="@string/detail_description"
            android:layout_width="wrap_content"/>
        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_none"
            android:layout_alignParentBottom="true"
            />
        <ImageView
            style="@style/detail_tipIcon"
            android:src="@drawable/arrow"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_detail_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/detail_delete"
        android:textColor="@color/colorWarn"
        android:textSize="@dimen/normal_font_size"
        />
</LinearLayout>
</ScrollView>