<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/sv_detail"
    android:descendantFocusability="afterDescendants"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorLightGrey0"
    >

    <TimePicker
        android:id="@+id/tp_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/timePicker"
        android:layout_gravity="center"
        android:descendantFocusability="beforeDescendants"
        android:numbersBackgroundColor="@color/colorLightGrey2"
        android:headerBackground="@color/colorLightGrey0"
        android:numbersSelectorColor="@color/colorPrimary"
        >

    </TimePicker>

    <RelativeLayout
        android:id="@+id/rl_detail_setFrequency"
        style="@style/detail_blockStyle"
        android:layout_height="@dimen/detail_block_height"
        >

        <TextView
            style="@style/normalTextStyle"
            android:text="@string/detail_repeat"
            />

        <TextView
            android:id="@+id/tv_detail_frequency"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/detail_frequency_once"
            />
        <ImageView
            style="@style/detail_tipIcon"
            android:src="@drawable/arrow_down"
            android:contentDescription="@string/arrow_down"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_detail_setRingtone"
        android:layout_height="@dimen/detail_block_height"
        style="@style/detail_blockStyle"
        >
        <TextView
            style="@style/normalTextStyle"
            android:text="@string/detail_ringtone"
            />
        <TextView
            android:id="@+id/tv_detail_ringtone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/detail_default_ringtone"
            android:layout_alignParentBottom="true"
            />
        <ImageView
            style="@style/detail_tipIcon"
            android:src="@drawable/arrow_right"
            android:contentDescription="@string/arrow_right"
            />
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/ll_detail_setVolume"
        style="@style/detail_blockStyle"
        android:orientation="horizontal"
        android:layout_height="@dimen/detail_block_height"
        android:gravity="center_vertical"
        >
        <TextView
            style="@style/normalTextStyle"
            android:text="@string/detail_volume"
            />
        <SeekBar
            android:id="@+id/skBar_detail_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.SeekBar"
            android:max="100"
            android:progress="80"
            android:thumb="@drawable/blue_thumb"
            />
    </LinearLayout>

    <!--<RelativeLayout-->
        <!--android:id="@+id/rl_detail_setRemind"-->
        <!--style="@style/detail_blockStyle"-->
        <!--android:layout_height="@dimen/detail_block_height"-->
        <!--&gt;-->
        <!--<TextView-->
            <!--style="@style/normalTextStyle"-->
            <!--android:text="@string/detail_remind_later"-->
            <!--/>-->
        <!--<TextView-->
            <!--android:id="@+id/tv_detail_remindLater"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/detail_turn_off"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--/>-->
        <!--<ImageView-->
            <!--style="@style/detail_tipIcon"-->
            <!--android:src="@drawable/arrow_down"-->
            <!--android:contentDescription="@string/arrow_down"-->
            <!--/>-->
    <!--</RelativeLayout>-->

    <RelativeLayout
        android:id="@+id/rl_detail_setDescription"
        style="@style/detail_blockStyle"
        android:layout_height="@dimen/detail_block_height"
        >

        <TextView
            style="@style/normalTextStyle"
            android:layout_width="wrap_content"
            android:text="@string/detail_description"/>

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="250dp"
            android:ellipsize="end"
            android:lines="1"
            android:layout_alignParentBottom="true"
            android:text="@string/detail_none"
            />

        <ImageView
            style="@style/detail_tipIcon"
            android:src="@drawable/arrow_down"
            android:contentDescription="@string/arrow_down"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/normal_block"
        style="@style/marginStyle">
        <Switch
            android:id="@+id/swt_detail_advancedRemind"
            style="@style/detail_blockStyle"
            android:layout_height="@dimen/detail_block_height"
            android:text="@string/detail_advanced_remind"
            android:textSize="@dimen/normal_font_size"
            android:textColor="@color/colorBlack"
            android:layout_margin="0dp"
            android:checked="false"
            >
        </Switch>
        <RelativeLayout
            android:id="@+id/rl_detail_setVerification"
            style="@style/detail_blockStyle"
            android:layout_height="@dimen/detail_block_height"
            android:layout_margin="0dp"
            android:visibility="gone"
            >

            <TextView
                style="@style/normalTextStyle"
                android:layout_width="wrap_content"
                android:text="@string/detail_input_verification"/>

            <TextView
                android:id="@+id/tv_detail_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/detail_verification"
                />

            <ImageView
                style="@style/detail_tipIcon"
                android:src="@drawable/arrow_down"
                android:contentDescription="@string/arrow_down"
                />

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_detail_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:padding="@dimen/normal_padding"
        android:text="@string/detail_delete"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/normal_font_size"
        />
</LinearLayout>
</ScrollView>